force-app/main/default/objects/NotionSyncConfig__mdt/NotionSyncConfig__mdt.object-meta.xml
<CustomObject>
    <label>Notion Sync Configuration</label>
    <pluralLabel>Notion Sync Configurations</pluralLabel>
    <fields>
        <fullName>BatchSize__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Maximum number of records to process in a single batch</description>
        <inlineHelpText>Default batch size for processing records. Maximum recommended: 100</inlineHelpText>
        <label>Batch Size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RateLimitPerSecond__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Maximum number of API requests per second</description>
        <inlineHelpText>Rate limit for Notion API calls. Default: 3 requests per second</inlineHelpText>
        <label>Rate Limit Per Second</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxRetryAttempts__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Maximum number of retry attempts for failed requests</description>
        <inlineHelpText>Number of times to retry failed API calls</inlineHelpText>
        <label>Max Retry Attempts</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnableBulkProcessing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable bulk processing for better performance</description>
        <inlineHelpText>When enabled, multiple records are processed in batches</inlineHelpText>
        <label>Enable Bulk Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QueueableChainLimit__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Maximum number of chained queueable jobs</description>
        <inlineHelpText>Limits the number of chained queueable jobs to prevent governor limit issues</inlineHelpText>
        <label>Queueable Chain Limit</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>