force-app/main/default/objects/NotionSyncConfig__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum number of records to process in a single batch</description>
    <inlineHelpText>Default batch size for processing records. Maximum recommended: 100</inlineHelpText>
    <label>Batch Size</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>