force-app/main/default/objects/NotionSyncConfig__mdt/fields/EnableBulkProcessing__c.field-meta.xml
<CustomField>
    <fullName>EnableBulkProcessing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable bulk processing for better performance</description>
    <inlineHelpText>When enabled, multiple records are processed in batches</inlineHelpText>
    <label>Enable Bulk Processing</label>
    <type>Checkbox</type>
</CustomField>