force-app/main/default/objects/NotionSyncConfig__mdt/fields/MaxRetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>MaxRetryAttempts__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of retry attempts for failed requests</description>
    <inlineHelpText>Number of times to retry failed API calls</inlineHelpText>
    <label>Max Retry Attempts</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>