force-app/main/default/objects/NotionSyncConfig__mdt/fields/QueueableChainLimit__c.field-meta.xml
<CustomField>
    <fullName>QueueableChainLimit__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of chained queueable jobs</description>
    <inlineHelpText>Limits the number of chained queueable jobs to prevent governor limit issues</inlineHelpText>
    <label>Queueable Chain Limit</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>