force-app/main/default/objects/NotionSyncConfig__mdt/fields/RateLimitPerSecond__c.field-meta.xml
<CustomField>
    <fullName>RateLimitPerSecond__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of API requests per second</description>
    <inlineHelpText>Rate limit for Notion API calls. Default: 3 requests per second</inlineHelpText>
    <label>Rate Limit Per Second</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>